Kubernetes/apps/data-plane/rabbitmq/app/network-policy/allow-operator-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-operator-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq
      app.kubernetes.io/name: network-policies
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: rabbitmq-operator
    ports:
    - port: 15672 # HTTP API
    - port: 15671 # HTTP API + TLS
